FIX: fixed an issue where GSAP animation was causing hero images to overflow outside of it's container

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body {
   position: relative;
   flex: 1;
   flex-basis: 25rem;
+  overflow: hidden;
 }
 
 .hero-img img {
